--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -3,13 +3,10 @@
 <head th:insert="~{fragments/header}">
     <title>Title</title>
 </head>
-<body class="bg-cinza-claro dark:bg-preto">
-<header>
-    <nav th:replace="fragments/navbar :: navbar(usuario=${null})"></nav>
-</header>
+<body class="bg-gray-400 dark:bg-preto">
 <main class="flex items-center justify-center h-screen">
     <section class="my-auto mx-auto w-full max-w-xl">
-        <h1 class="text-center text-xl text-cinza dark:text-branco my-4">
+        <h1 class="text-center text-xl text-branco my-4">
             Insira as informações para completar o seu cadastro
         </h1>
         <div th:if="${erroDeCadastro}" class="bg-red-100 mb-4 rounded-lg p-0.5 mx-auto max-w-sm">
@@ -25,7 +22,7 @@
                         type="text"
                         name="nome"
                         id="nome"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{nome}"
                         required
@@ -43,8 +40,9 @@
                         type="text"
                         name="cpf"
                         id="cpf"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
+                        th:maxlength="${14}"
                         th:field="*{cpf}"
                         required
                 />
@@ -61,7 +59,7 @@
                         type="email"
                         name="email"
                         id="email"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{email}"
                         required
@@ -79,7 +77,7 @@
                         type="password"
                         name="senha"
                         id="senha"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{senha}"
                         required
@@ -97,7 +95,7 @@
                         type="tel"
                         name="telefone"
                         id="telefone"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{telefone}"
                 />
@@ -118,9 +116,10 @@
                         type="text"
                         name="placa"
                         id="placa"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{placa}"
+                        th:maxlength="${7}"
                         required
                 />
                 <label
@@ -136,7 +135,7 @@
                         type="text"
                         name="modelo"
                         id="modelo"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{modelo}"
                         required
@@ -158,7 +157,7 @@
                         pattern="\d{4}"
                         name="ano"
                         id="ano"
-                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-gray-500 dark:text-white border-gray-400 dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
                         th:field="*{ano}"
                         required
@@ -190,7 +189,6 @@
         </form>
     </section>
 </main>
-<footer th:replace="fragments/footer :: footer"></footer>
-<script th:src="@{/js/navbar.js}"></script>
+<script th:src="@{/js/cadastroUsuario.js}"></script>
 </body>
 </html>
