--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head th:insert="header">
-    <title>Title</title>
-</head>
-<body>
 <nav th:fragment="navbar(usuario)"
      class="relative flex w-full flex-wrap items-center justify-between bg-cinza dark:bg-preto py-2 shadow-dark-mild lg:py-4"
      data-twe-navbar-ref>
@@ -121,7 +115,7 @@
                         Cadastrar meu veículo
                     </a>
                 </li>
-                <li class="my-2 ps-2 lg:my-0 lg:pe-1 lg:ps-2"
+                <li th:if="${usuario != null}" class="my-2 ps-2 lg:my-0 lg:pe-1 lg:ps-2"
                     data-twe-nav-item-ref
                 >
                     <a class="text-white font-semibold transition duration-200 opacity-75 hover:opacity-100 hover:ease-in-out focus:opacity-100 active:opacity-100 motion-reduce:transition-none lg:px-2"
@@ -184,5 +178,3 @@
         </div>
     </div>
 </nav>
-</body>
-</html>
