--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head th:insert="~{fragments/header}">
     <title>Title</title>
 </head>
-<body class="bg-branco dark:bg-cinza">
+<body class="bg-gray-400 dark:bg-cinza">
 <header>
     <nav th:replace="fragments/navbar :: navbar(usuario=${logado})"></nav>
 </header>
@@ -12,10 +12,10 @@
         <h1 class="font-bold text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-5xl text-dourado mb-2 mx-auto text-center">
             A mais famosa oficina mecânica das redes está a um clique de você!
         </h1>
-        <p class="text-center md:text-lg xl:text-xl text-cinza dark:text-branco">
+        <p class="text-center md:text-lg xl:text-xl text-branco">
             Chegamos até você através dos virais, agora queremos chegar com nosso serviço!.
         </p>
-        <p class="text-center md:text-lg xl:text-xl text-cinza dark:text-branco">
+        <p class="text-center md:text-lg xl:text-xl text-branco">
             Com nosso agendamento online, você pode reservar um horário sem sair
             do conforto da sua casa.
         </p>
