--- a/src/main/resources/templates/usuario/index.html
+++ b/src/main/resources/templates/usuario/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="pt-br">
+<head th:insert="~{fragments/header}">
     <title>Title</title>
 </head>
-<body>
-
+<body class="bg-gray-400 dark:bg-cinza h-screen">
+<header>
+    <nav th:replace="fragments/navbar :: navbar(usuario=${logado})"></nav>
+</header>
+<h1 class="font-bold text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-5xl text-dourado my-6 lg:my-12 mx-auto text-center">
+    Informações do usuário
+</h1>
+<main class="p-8 mb-12">
+    <div class="bg-branco dark:bg-preto overflow-hidden shadow rounded-lg border">
+        <div class="px-4 py-5 sm:px-6">
+            <h3 class="text-lg leading-6 font-medium text-preto dark:text-branco" th:text="${usuario.nome}">
+            </h3>
+            <p class="mt-1 max-w-2xl text-sm text-cinza dark:text-cinza-claro">
+                Suas informações de cadastro
+            </p>
+        </div>
+        <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
+            <dl class="sm:divide-y sm:divide-gray-200">
+                <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-cinza dark:text-branco">
+                        Nome
+                    </dt>
+                    <dd class="mt-1 text-sm text-dourado font-bold  sm:mt-0 sm:col-span-2"
+                        th:text="${usuario.nome}">
+                    </dd>
+                </div>
+                <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-cinza dark:text-branco">
+                        CPF
+                    </dt>
+                    <dd class="mt-1 text-sm text-dourado font-bold  sm:mt-0 sm:col-span-2"
+                        th:text="${usuario.cpf}">
+                    </dd>
+                </div>
+                <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-cinza dark:text-branco">
+                        Endereço de email
+                    </dt>
+                    <dd class="mt-1 text-sm text-dourado font-bold  sm:mt-0 sm:col-span-2"
+                        th:text="${usuario.email}">
+                    </dd>
+                </div>
+                <div th:if="${usuario.telefone != null && !usuario.telefone.isBlank()}"
+                     class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-cinza dark:text-branco">
+                        Número de telefone
+                    </dt>
+                    <dd class="mt-1 text-sm text-dourado font-bold  sm:mt-0 sm:col-span-2"
+                        th:text="${usuario.telefone}">
+                    </dd>
+                </div>
+                <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                    <dt class="text-sm font-medium text-cinza dark:text-branco">
+                        Veículos cadastrados:
+                    </dt>
+                    <dd class="mt-1 text-sm sm:mt-0 sm:col-span-2">
+                        <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4">
+                            <li class="col-span-1" th:each="veiculo : ${usuario.veiculos}" >
+                                <p class="text-preto dark:text-branco my-2">
+                                    Placa: <span th:text="${veiculo.placa}"
+                                                 class="font-bold  text-dourado"></span>
+                                </p>
+                                <p class="text-preto dark:text-branco my-2">
+                                    Modelo: <span th:text="${veiculo.modelo}"
+                                                  class="font-bold  text-dourado"></span>
+                                </p>
+                                <p class="text-preto dark:text-branco my-2">
+                                    Ano: <span th:text="${veiculo.ano}" class="font-bold  text-dourado"></span>
+                                </p>
+                                <p class="text-preto dark:text-branco my-2">
+                                    Última revisão: <span class="font-bold text-dourado">Não foram realizadas revisões</span>
+                                </p>
+                            </li>
+                        </ul>
+                    </dd>
+                </div>
+            </dl>
+        </div>
+    </div>
+</main>
+<footer th:replace="fragments/footer :: footer"></footer>
+<script th:src="@{/js/navbar.js}"></script>
 </body>
 </html>
